--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "babel-plugin-react-require": "3.1.3",
     "babel-plugin-transform-class-properties": "6.24.1",
     "config": "3.3.6",
+    "date-fns": "^2.23.0",
     "dateformat": "4.5.1",
     "dayjs": "1.10.5",
     "dotenv": "10.0.0",
